Added ProductsAdapter to show products response

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Products</string>
+    <string name="text_network_message">Network connection not working</string>
 </resources>
